<resources>
    <string name="web_app_domain">twilio-video-react.appspot.com</string>
    <string name="login_screen_auth_error_title">Login Error</string>
    <string name="login_screen_auth_error_desc">There was an issue logging in.</string>
    <string name="room_screen_connection_failure_title">Connection Failure</string>
    <string name="room_screen_connection_failure_message">Failed to connect to the room.</string>
    <string name="room_screen_token_retrieval_failure_message">Failed to retrieve the room token.</string>
    <string name="room_screen_token_expired_message">Passcode expired. Please sign in with a new passcode.</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="room_notification_channel_title">Video Call</string>
    <string name="room_notification_title">Meeting in Progress : %s</string>
    <string name="room_notification_message">Tap to return to the room.</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_enable_stats">Enable Stats</string>
    <string name="settings_screen_enable_network_quality_level">Enable Network Quality Level</string>
    <string name="settings_screen_enable_insights">Enable Insights</string>
    <string name="settings_screen_enable_automatic_track_subscription">Enable Automatic Track Subscription</string>
    <string name="settings_screen_enable_dominant_speaker">Enable Dominant Speaker</string>
    <string name="settings_screen_record_participants_on_connect">Record Participants on Connect</string>
    <string name="settings_screen_enable_network_quality_level_description">Network Quality Level</string>
    <string name="settings_screen_environment_string">Environment</string>
    <string name="settings_screen_topology">Topology</string>
    <string name="settings_screen_media">Media</string>
    <string name="settings_screen_about">About</string>
    <string name="settings_screen_video_codecs">Video Codec</string>
    <string name="settings_screen_audio_codecs">Audio Codec</string>
    <string name="settings_screen_max_video_bitrate">Video Bitrate (Kbps)</string>
    <string name="settings_screen_max_audio_bitrate">Audio Bitrate (Kbps)</string>
    <string name="settings_screen_vp8_simulcast">VP8 Simulcast</string>
    <string name="settings_screen_aspect_ratio">Aspect Ratio</string>
    <string name="settings_screen_fps">Frames per second</string>
    <string name="settings_screen_identity">User Identity</string>
    <string name="settings_screen_version">Version</string>
    <string name="settings_screen_version_code">Version Code</string>
    <string name="settings_screen_video_library_version">Video Library Version</string>
    <string name="settings_screen_logout">Log Out</string>
    <string name="settings_screen_video_dimensions">Video dimensions</string>
    <string-array name="settings_screen_environment_array">
        <item>Production</item>
        <item>Staging</item>
        <item>Development</item>
    </string-array>
    <string-array name="settings_screen_environment_array_values">
        <item>production</item>
        <item>stage</item>
        <item>dev</item>
    </string-array>
    <string-array name="settings_screen_topology_array">
        <item>group</item>
        <item>group-small</item>
        <item>peer-to-peer</item>
    </string-array>
    <string-array name="settings_screen_aspect_ratio_array">
        <item>4:3</item>
        <item>16:9</item>
        <item>11:9</item>
    </string-array>
    <string-array name="settings_screen_aspect_ratio_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="settings_screen_video_dimensions_array">
        <item>352x288</item>
        <item>640x480</item>
        <item>800x480</item>
        <item>960x540</item>
        <item>1280x720</item>
        <item>1280x960</item>
        <item>1440x1080</item>
        <item>1920x1080</item>
    </string-array>
    <string name="stats_enable_in_settings">Enable in Settings</string>
    <string name="app_name">Video</string>
    <string name="login">LOG IN</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="ice_transp_policy">Transportation policy</string>
    <string name="ice_servers_dialog_title">ICE Options</string>
    <string name="ice_servers_list_desc">Choose server(s)</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="pause_audio">Pause audio</string>
    <string name="resume_audio">Resume audio</string>
    <string name="pause_video">Pause video</string>
    <string name="resume_video">Resume video</string>
    <string name="share_screen">Share screen</string>
    <string name="select_audio_device">Select audio device</string>
    <string name="stop_screen_share">Stop screen share</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="screen_capture_error">Screen capturer error occurred.</string>
    <string name="general">General</string>
    <string name="join">Join</string>
    <string name="permissions_required">Camera, Microphone, and Writing to External Storage permissions are required. Please enable them in App Settings.</string>
    <string name="permissions_required_camera">Camera Permission is required. Please enable this in App Settings.</string>
    <string name="failed_to_add_camera_video_track">Failed to add camera video track</string>
    <string name="failed_to_add_screen_video_track">Failed to add screen video track</string>
    <string name="stats_track_sid">sid</string>
    <string name="stats_codec">codec</string>
    <string name="stats_packets">packets lost</string>
    <string name="stats_bytes_sent">bytes sent</string>
    <string name="stats_bytes_received">bytes received</string>
    <string name="stats_gathering_disabled">Statistics Gathering Disabled</string>
    <string name="stats_unavailable">Statistics Unavailable</string>
    <string name="stats_description_join_room">Join a Room to View Statistics</string>
    <string name="stats_description_media_not_shared">Media is Not Being Shared</string>
    <string name="stats_rtt">round trip time</string>
    <string name="stats_jitter">jitter</string>
    <string name="stats_audio_level">audio level</string>
    <string name="stats_dimensions">dimensions</string>
    <string name="stats_framerate">framerate</string>
    <string name="audio_track">Audio Track</string>
    <string name="local_audio_track">Local Audio Track</string>
    <string name="video_track">Video Track</string>
    <string name="local_video_track">Local Video Track</string>
    <string name="camera_video_track">Camera Video Track</string>
    <string name="screen_video_track">Screen Video Track</string>
    <string name="you"></string>
    <string name="sign_in_with_existing_account">Sign in with Existing Account</string>
    <string name="password">Password</string>
    <string name="recording_notice">Recording may be enabled for quality assurance.</string>
    <string name="audio_toggle">Audio toggle</string>
    <string name="video_logo">Video Logo</string>
    <string name="stats_disabled">Stats disabled</string>
    <string name="profile_picture">Profile picture</string>
    <string name="number">Number</string>
    <string name="slider1_header">Start a Meeting</string>
    <string name="slider1_description">Start or join a video meeting\n on the go…</string>
    <string name="join_a_meeting">Join a Meeting</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="dash_board">Dashboard</string>
    <string name="scheduled">Scheduled Meeting</string>
    <string name="meeting_id_or_url">Meeting ID or URL</string>
    <string name="your_name">Your Name</string>
    <string name="email_id_optional">Email ID (Optional)</string>
    <string name="field_required">This Field is Mandatory</string>
    <string name="meeting_id_validation">Meeting ID is mandatory</string>
    <string name="meeting_name_validation">Name field is mandatory</string>
    <string name="invalid_meeting_name">Invalid Meeting Name</string>
    <string name="invalid_email">Your Email ID is incorrect. Please check the Email ID and try again</string>
    <string name="join_meeting_text">If you have received an invitation link, tap on the link to join the meeting</string>
    <string name="meeting_password_text">Please enter your meeting password</string>
    <string name="close">Close</string>
    <string name="continue_text">Continue</string>
    <string name="call_using_internet_audio">Call using internet Audio</string>
    <string name="microphone_text">Your microphone is disabled. Tap to enable the audio</string>
    <string name="disconnect_audio_text">Long press to disconnect audio</string>
    <string name="don_t_connect_to_audio">Turn off Audio</string>
    <string name="turn_off_my_video">Turn off Video</string>
    <string name="video_preview">Video Preview</string>
    <string name="always_show_video_preview_dialog_when_joining_a_video_meeting">Always show video preview dialog when joining a video meeting</string>
    <string name="join_with_video">Join With Video</string>
    <string name="join_without_video">Join Without Video</string>
    <string name="unmute">Unmute</string>
    <string name="start_video">Start Video</string>
    <string name="share">Share</string>
    <string name="participant">Participant</string>
    <string name="chat">Chat</string>
    <string name="mute">Mute</string>
    <string name="videoOn">Start Video</string>
    <string name="videoOff">Pause Video</string>
    <string name="end_to_end_encryption">End to End Encryption</string>
    <string name="start_my_video">Start My Video</string>
    <string name="doesn_t_have_a_account">Doesn’t have a account?</string>
    <string name="search">Search</string>
    <string name="invite">Invite</string>
    <string name="if_you_have_received_an_invitation_link_tap_on_the_link_to_join_the_meeting">If you have received an invitation link, tap on the link to join the meeting</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="meetings">Meetings</string>
    <string name="start_or_schedule_a_meeting">Start or schedule a meeting</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="new_meeting">New Meeting</string>
    <string name="start_new_meeting">Start New Meeting</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="upcoming_meetings">Upcoming Meetings</string>
    <string name="no_upcoming_meeting">No Meeting Found </string>
    <string name="meeting_description">Meeting Description</string>
    <string name="date">Date*</string>
    <string name="time_zone">Time Zone*</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="repeat">Repeat</string>
    <string name="use_personal_meeting_id">Use Personal Meeting ID</string>
    <string name="required_missing_password">Required Meeting Password</string>
    <string name="meeting_password">Meeting Password</string>
    <string name="save">Save</string>
    <string name="starting_time">Starting Time*</string>
    <string name="duration">Duration</string>
    <string name="done">Done</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="start">Start</string>
    <string name="when">When</string>
    <string name="invitation_link">Invitation Link</string>
    <string name="add_invitee">Add Invitee</string>
    <string name="password_validation">Your meeting password is too Short.</string>
    <string name="meeting_topic">Meeting Topic*</string>
    <string name="update_profile">Update Profile</string>
</resources>