<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stats_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/stats_track_name"
        style="@style/Stats.TextTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <View
        android:id="@+id/stats_item_line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/stats_track_name"
        android:layout_marginTop="5dp"
        android:background="@color/colorFadedRed"
        android:paddingTop="8dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats_item_line"
        android:layout_marginTop="5dp"
        android:stretchColumns="*">

        <TableRow android:id="@+id/stats_track_sid_row">

            <TextView
                android:id="@+id/stats_track_sid_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_track_sid" />

            <TextView
                android:id="@+id/stats_track_sid_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_codec_row">

            <TextView
                android:id="@+id/stats_codec_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_codec" />

            <TextView
                android:id="@+id/stats_codec_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_packets_row">

            <TextView
                android:id="@+id/stats_packets_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_packets" />

            <TextView
                android:id="@+id/stats_packets_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_bytes_row">

            <TextView
                android:id="@+id/stats_bytes_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_bytes_sent" />

            <TextView
                android:id="@+id/stats_bytes_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_rtt_row">

            <TextView
                android:id="@+id/stats_rtt_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_rtt" />

            <TextView
                android:id="@+id/stats_rtt_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_jitter_row">

            <TextView
                android:id="@+id/stats_jitter_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_jitter" />

            <TextView
                android:id="@+id/stats_jitter_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_audio_level_row">

            <TextView
                android:id="@+id/stats_audio_level_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_audio_level" />

            <TextView
                android:id="@+id/stats_audio_level_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_dimensions_row">

            <TextView
                android:id="@+id/stats_dimensions_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_dimensions" />

            <TextView
                android:id="@+id/stats_dimensions_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>

        <TableRow android:id="@+id/stats_framerate_row">

            <TextView
                android:id="@+id/stats_framerate_title"
                style="@style/Stats.TextTitle"
                android:gravity="start"
                android:text="@string/stats_framerate" />

            <TextView
                android:id="@+id/stats_framerate_value"
                style="@style/Stats.TextValue"
                android:gravity="start" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
