<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/muli_bold"
        android:gravity="center"
        android:text="@string/meeting_password_text"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/_16sdp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPasswordMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/blueColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/close_sheet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/continue_sheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/continue_text"
            android:textColor="@color/blueColor"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>


